--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #f4c8c8;
+  --primary: #f3cfcf;
   --bg: #fcdbdb;
 }
 
@@ -96,7 +96,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: left;
-  padding-bottom: 500px;
 }
 
 .cake {
@@ -3594,6 +3593,124 @@ body {
   line-height: 1.5;
 }
 
+.yeay h2 {
+  margin-top: 8rem;
+  font-size: 2rem;
+  font-weight: 500;
+  color: #461d1d;
+  width: 100%;
+  margin-left: 65px;
+}
+
+/*Photos*/
+.photos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 3rem;
+  flex-wrap: wrap;
+}
+.photos img {
+  width: 250px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition:
+    transform 0.3s,
+    box-shadow 0.3s;
+}
+
+.last {
+  padding: 1.4rem 12%;
+  max-width: 100rem;
+  margin-bottom: 5rem;
+}
+
+.last .p1 {
+  font-size: 1rem;
+  color: #461d1d;
+  line-height: 1.5;
+  margin-top: 2rem;
+}
+
+.last .p2 {
+  font-size: 1rem;
+  color: #461d1d;
+  line-height: 1.5;
+  margin-top: 1rem;
+}
+
+.contact {
+  background-color: var(--primary);
+  padding: 1rem 5% 1rem;
+}
+
+.contact .container {
+  max-width: 1040px;
+  margin: 0 auto;
+}
+
+.contact .container h2 {
+  margin-left: 300px;
+  font-size: 1.9rem;
+  margin-bottom: 1rem;
+  color: #5c3737;
+  font-weight: 600;
+  margin-top: 0.1rem;
+}
+
+.contact .container .contact-wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 50px;
+}
+
+.contact .container .contact-wrapper .contact-form {
+  text-align: left;
+}
+
+.contact .container .contact-wrapper .contact-form .form-group input,
+textarea {
+  margin-left: 247px;
+  width: 100%;
+  padding: 20px;
+  border-radius: 7px;
+  border: none;
+  background-color: var(--bg);
+  color: #461d1d;
+}
+
+.contact .container .contact-wrapper .contact-form .form-group input:focus,
+textarea:focus {
+  outline: none;
+  box-shadow: 0 0 8px #2b1d1d;
+}
+
+.contact .container .contact-wrapper .contact-form button {
+  display: flex;
+  padding: 6px 12px;
+  background-color: #432323;
+  color: var(--bg);
+  border: none;
+  cursor: pointer;
+  margin-left: 247px;
+  margin-top: 1rem;
+  border-radius: 5px;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background: #461d1d;
+}
+.footer {
+  background-color: var(--bg);
+  text-align: center;
+  padding: 1rem 5%;
+  color: #461d1d;
+  font-size: 1rem;
+}
+
 /*Laptop*/
 @media (max-width: 1200px) {
   html {
@@ -3644,49 +3761,34 @@ body {
     color: #461d1d;
     line-height: 1.5;
   }
-}
 
-/*Mobile Phone*/
-@media (max-width: 450px) {
-  html {
-    font-size: 55%;
+  .yeay h2 {
+    float: right;
+    margin-right: 0.1rem;
+    width: 130%;
+    margin-top: 4rem;
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: #461d1d;
+    line-height: 1.5;
   }
 
-  #home {
-    display: inline-block;
+  .last {
+    padding: 0.1rem 1%;
+    max-width: 100rem;
   }
 
-  .content {
-    position: absolute;
-    top: 100%;
-    right: -100%;
-    background-color: #f2e9e9;
-    width: 30rem;
-    height: 100vh;
-    transition: 0.3s;
+  .last .p1 {
+    font-size: 1rem;
+    color: #461d1d;
+    line-height: 1.5;
+    margin-top: 2rem;
   }
 
-  .navbar .navbar-nav.active {
-    right: 0;
-  }
-
-  .navbar .navbar-nav a {
-    color: var(--primary);
-    display: block;
-    margin: 1.5rem;
-    padding: 8px;
-    font-size: 2rem;
-  }
-
-  .navbar .navbar-nav a::after {
-    transform-origin: 0 0;
-  }
-
-  .navbar .navbar-nav a:hover::after {
-    transform: scaleX(0.2);
-  }
-
-  .about .row {
-    flex-wrap: wrap;
+  .last .p2 {
+    font-size: 1rem;
+    color: #461d1d;
+    line-height: 1.5;
+    margin-top: 1rem;
   }
 }
